change func name and extract duplicates